# excel

./: .gitignore  excel_workbook.py  myJupyter.ipynb  pyproject.toml  wb_capture.py  xlfunctions.py
.idx/: dev.nix
tests/: __init__.py  data.py  fixtures.py  test_base_workbook.py  test_table_comparator.py  utilities.py
tests/files/: Reporte_Conciliación_Fiscal_F2517V6_AG2023_v1.0.1-2024.xlsm  cdts.py  excel_module_test.xlsx  xlfunctions.xlsx
xlfunctions/: __init__.py  core.py  xlfdate.py  xlftext.py
