[tool.poetry]
name = "excel"
version = "0.1.0"
description = ""
authors = ["agmontesb <agmontesb@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.1"
openpyxl = "^3.1.5"
ipython = "^8.27.0"
pytest = "^8.3.3"
pytest-env = "^1.1.5"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]